<resources>
    <string name="app_name">FunkyDrunky</string>

    <string name="condition_chain_title">Condition</string>
    <string name="calculation_chain_title">Calculation</string>
    <string name="about_chain_title">About</string>
    <string name="agreement_chain_title">Funky Drunky</string>
    <string name="settings_chain_title">Settings</string>
    <string name="debug_chain_title">Debug</string>

    <!-- AGREEMENT SCREEN -->
    <string name="user_agree_question">I agree</string>
    <string name="continue_button_text">Continue</string>

    <!-- AGREEMENT CONTENT SCREEN -->
    <string name="agreement_content">
        Program licence\nUser agreement\nSome other text\n
    </string>

    <!-- SELECT EFFECT SCREEN -->
    <string name="SelectEffectCaption">Funky Drunky</string>
    <string name="DoYoHaveAParty">Do you have a party tonight?</string>
    <string name="AnyPlans">Any plans?</string>
    <string name="ToRelax">To relax.</string>
    <string name="ToRelaxButtonText">GREAT!</string>
    <string name="ToHaveAFun">Let\'s have a fun!</string>
    <string name="ToHaveAFunButtonText">WOW!</string>
    <string name="ToDrunkOver">Legless...</string>
    <string name="ToDrunkOverButtonText">REALLY?</string>
    <string name="ToContinueAnyway">Continue anyway...</string>
    <string name="ToDContinueAnywayButtonText">Are you sure?..</string>

    <!-- SELECT DRINK SCREEN -->
    <string name="SelectDrinkCaption">Choose a drink</string>
    <string name="WhatToDrink">What would you like to drink?</string>
    <string name="DrinkWatermark">find a drink you want</string>
    <string name="HowMuch">HOW MUCH DO I NEED?</string>
    <string name="MoreAboutIt">MORE ABOUT IT</string>
    <string name="NothingWasFound">Nothing was found. Try again.</string>

    <!-- CALCED RESULT SCREEN -->
    <string name="WhereToGo">WHERE TO GO?</string>
    <string name="GotIt">GOT IT!</string>
    <string name="ToRelaxMessage">"To relax tonight don't drink\nmore than %d ml of\n%s."</string>
    <string name="ToHaveAFunMessage">"To have a fun tonight don't drink\nmore than %d ml of\n%s."</string>
    <string name="ToDrunkOverMessage">"To be legless tonight drink\nat least %d ml of\n%s."</string>
    <string name="ToContinueAnywayMessage">"%d ml of\n%s."</string>

    <!-- ASK TO FILL PROFILE DIALOG -->
    <string name="AskToFillProfile_Title">Calculation</string>
    <string name="AskToFillProfile_Text">To get a more precise calculation, please, fill the profile.</string>
    <string name="Ok">OK</string>
    <string name="Skip">SKIP</string>

    <!-- SETTINGS SCREEN -->
    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Age">Age</string>
    <string name="Weight">Weight</string>
    <string name="Save">Save</string>

    <!-- CONDITION SCREEN -->
    <string name="RecentlyDrunk">Recently drunk</string>
    <string name="CanDrive">You can drive.</string>
    <string name="CanDriveIn">Approx. %.0fh. before you can drive</string>
    <string name="DrunkItemTitle">%d ml %s</string>
    <string name="DiffMinutes">%d min.</string>
    <string name="DiffHoursMinutes">%d h. %d min.</string>
    <string name="Sober">Sober</string>
    <string name="Mille">BAC: %.2f </string>
    <string name="Info">Info</string>
    <string name="Cancel">Cancel</string>
    <string name="Repeat">Repeat</string>
    <string name="Relax">Relax :)</string>
    <string name="Funky">Funky!</string>
    <string name="Legless">Legless :(</string>

    <!-- MAP -->
    <string name="PlaceWatermark">Choose a place</string>


    <!-- MENU -->
    <string name="Menu_Condition">Condition</string>
    <string name="Menu_Calculation">Calculation</string>
    <string name="Menu_Settings">Settings</string>
    <string name="Menu_About">About</string>

</resources>