<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_condition"
            android:icon="@drawable/ic_condition_24dp"
            android:title="@string/Menu_Condition" />
        <item
            android:id="@+id/nav_calculation"
            android:icon="@drawable/ic_calculation_24dp"
            android:title="@string/Menu_Calculation" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/Menu_Settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_24dp"
            android:title="@string/Menu_About" />

        <item
            android:id="@+id/nav_result"
            android:icon="@drawable/ic_about_24dp"
            android:title="[RESULT]" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_about_24dp"
            android:title="[MAP]" />
    </group>

</menu>
