<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/caption_height"
        android:layout_weight="0">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_keyboard_backspace_black_24dp" />

        <TextView
            style="@style/AlcoApp.CaptionTextStyle"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:text="@string/SelectDrinkCaption" />

    </FrameLayout>

    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_above="@+id/id_from_your_LinearLayout"
        android:background="@drawable/shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lActiveArea"
        android:layout_width="match_parent"
        android:layout_height="@dimen/active_area_height"
        android:layout_weight="0"
        android:orientation="vertical">

        <TextView
            style="@style/AlcoApp.QuestionTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="roboto"
            android:text="@string/WhatToDrink"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="76dp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="2dp">

                <ImageButton
                    android:id="@+id/btnSearch"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="0"
                    android:background="@android:color/transparent"
                    android:padding="2dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_search_black_48dp" />

                <AutoCompleteTextView
                    android:id="@+id/txtDrink"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/DrinkWatermark"
                    android:imeOptions="actionSearch"
                    android:singleLine="true"
                    android:textAppearance="@style/DrinkTextStyle" />

                <ImageButton
                    android:id="@+id/btnMic"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0"
                    android:background="@android:color/transparent"
                    android:padding="2dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_mic_black_48dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/txtNotFound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|clip_vertical"
            android:text="Nothing was found. Try again."
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/lDrinks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="0" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/footer_height"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnHowMuch"
            style="@style/AlcoApp.ActionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/HowMuch" />

    </LinearLayout>
</LinearLayout>
